--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -29,6 +29,7 @@ subdir('hailuck')
 subdir('intel-spi')
 subdir('iommu')
 subdir('jabra')
+subdir('kinetic-dp')
 subdir('lenovo-thinklmi')
 subdir('linux-lockdown')
 subdir('linux-sleep')
