--- a/libfwupdplugin/fu-fuzzer-firmware.c.in
+++ b/libfwupdplugin/fu-fuzzer-firmware.c.in
@@ -10,7 +10,7 @@
 int
 LLVMFuzzerTestOneInput (const guint8 *data, gsize size)
 {
-	g_autoptr(FuFirmware) firmware = @FIRMWARENEW@ ();
+	g_autoptr(FuFirmware) firmware = FU_FIRMWARE (@FIRMWARENEW@ ());
 	g_autoptr(GBytes) fw = g_bytes_new (data, size);
 	gboolean ret = fu_firmware_parse (firmware, fw, FWUPD_INSTALL_FLAG_NONE, NULL);
 	if (!ret && fu_firmware_has_flag (firmware, FU_FIRMWARE_FLAG_HAS_CHECKSUM)) {
