--- a/plugins/redfish/meson.build
+++ b/plugins/redfish/meson.build
@@ -4,13 +4,21 @@ if not get_option('curl')
 endif
 cargs = ['-DG_LOG_DOMAIN="FuPluginRedfish"']
 
+install_data(['redfish.quirk'],
+  install_dir: join_paths(datadir, 'fwupd', 'quirks.d')
+)
+
 shared_module('fu_plugin_redfish',
   fu_hash,
   sources : [
     'fu-plugin-redfish.c',
     'fu-redfish-backend.c',
     'fu-redfish-common.c',     # fuzzing
+    'fu-redfish-device.c',
+    'fu-redfish-legacy-device.c',
+    'fu-redfish-multipart-device.c',
     'fu-redfish-network.c',
+    'fu-redfish-request.c',
     'fu-redfish-smbios.c',     # fuzzing
   ],
   include_directories : [
@@ -36,6 +44,13 @@ install_data(['redfish.conf'],
 )
 
 if get_option('tests')
+  testdatadir = join_paths(meson.current_source_dir(), 'tests')
+  testdatadirs = environment()
+  testdatadirs.set('G_TEST_SRCDIR', meson.current_source_dir())
+  testdatadirs.set('G_TEST_BUILDDIR', meson.current_build_dir())
+  testdatadirs.set('FWUPD_LOCALSTATEDIR', '/tmp/fwupd-self-test/var')
+  cargs += '-DTESTDATADIR="' + testdatadir + '"'
+  cargs += '-DPLUGINBUILDDIR="' + meson.current_build_dir() + '"'
   e = executable(
     'redfish-self-test',
     fu_hash,
@@ -43,7 +58,11 @@ if get_option('tests')
       'fu-self-test.c',
       'fu-redfish-backend.c',
       'fu-redfish-common.c',
+      'fu-redfish-device.c',
+      'fu-redfish-legacy-device.c',
+      'fu-redfish-multipart-device.c',
       'fu-redfish-network.c',
+      'fu-redfish-request.c',
       'fu-redfish-smbios.c',
     ],
     include_directories : [
