trivial: don't use noclone attribute for cet checker on clang
Clang doesn't support this

--- a/plugins/cpu/meson.build
+++ b/plugins/cpu/meson.build
@@ -27,10 +27,16 @@ shared_module('fu_plugin_cpu',
   ],
 )
 
+code = '''
+#if !__has_attribute (__noclone__)
+#error symver attribute not supported
+#endif
+static void __attribute__((noinline,noclone)) f(void) {}
+'''
+
 # verify the compiler knows what to do
 if cc.has_argument('-fcf-protection')
-  build_fwupdcethelper = cc.compiles(
-    'static void __attribute__((noinline,noclone)) f(void) {}',
+  build_fwupdcethelper = cc.compiles(code,
     name : '__attribute__((noinline,noclone))',
   )
 else
