--- a/data/daemon.conf
+++ b/data/daemon.conf
@@ -42,3 +42,8 @@ BlockedFirmware=
 #
 # If unset or no schemes are listed, the default will be: file,https,http,ipfs
 UriSchemes=
+
+# Minimum kernel version to allow use of drm_dp_aux devices on amdgpu
+# It's important that all backports from this kernel have been
+# made if using an older kernel
+MinimumAmdGpuKernelVersion=5.2.0
