--- a/plugins/modem-manager/meson.build
+++ b/plugins/modem-manager/meson.build
@@ -12,6 +12,7 @@ shared_module('fu_plugin_modem_manager',
     'fu-mm-device.c',
     'fu-qmi-pdc-updater.c',
     'fu-mbim-qdu-updater.c',
+    'fu-firehose-updater.c',
     'fu-mm-utils.c'
   ],
   include_directories : [
