trivial: Move the builder docs to docdir
Fixes https://github.com/fwupd/fwupd/issues/3464

--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -392,7 +392,7 @@ done
 %dir %{_localstatedir}/cache/fwupd
 %dir %{_datadir}/fwupd/quirks.d
 %{_datadir}/fwupd/quirks.d/*.quirk
-%{_localstatedir}/lib/fwupd/builder/README.md
+%{_datadir}/doc/fwupd/builder/README.md
 %{_libdir}/libfwupd*.so.*
 %{_libdir}/girepository-1.0/Fwupd-2.0.typelib
 %{_libdir}/girepository-1.0/FwupdPlugin-1.0.typelib
