--- a/data/builder/meson.build
+++ b/data/builder/meson.build
@@ -1,3 +1,3 @@
 install_data('README.md',
-  install_dir : join_paths(localstatedir, 'lib', 'fwupd', 'builder')
+  install_dir : join_paths(datadir, 'doc', 'fwupd', 'builder')
 )
