--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -427,7 +427,9 @@ done
 %{_libdir}/fwupd-plugins-3/libfu_plugin_hailuck.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_iommu.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_jabra.so
+%if 0%{?have_uefi}
 %{_libdir}/fwupd-plugins-3/libfu_plugin_lenovo_thinklmi.so
+%endif
 %{_libdir}/fwupd-plugins-3/libfu_plugin_linux_lockdown.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_linux_sleep.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_linux_swap.so
