redfish: Fix the docs to match reality

--- a/plugins/redfish/redfish.conf
+++ b/plugins/redfish/redfish.conf
@@ -10,5 +10,5 @@
 
 # Whether to verify the server certificate or not
 # Expected value: TRUE or FALSE
-# Default: TRUE
+# Default: FALSE
 #CACheck=
