redfish: Automatically connect the BMC network interface at startup
Some distributions like RHEL change the default to not autoconnect
ethernet devices. This breaks connecting to the SMBIOS-defined BMC
adapter which means all the reads fail after a 60s timemout.

Autoconnect the internal USB ethernet adapter so we can use Redfish
without user action.

--- a/plugins/redfish/meson.build
+++ b/plugins/redfish/meson.build
@@ -18,6 +18,7 @@ shared_module('fu_plugin_redfish',
     'fu-redfish-legacy-device.c',
     'fu-redfish-multipart-device.c',
     'fu-redfish-network.c',
+    'fu-redfish-network-device.c',
     'fu-redfish-request.c',
     'fu-redfish-smbios.c',     # fuzzing
   ],
@@ -62,6 +63,7 @@ if get_option('tests')
       'fu-redfish-legacy-device.c',
       'fu-redfish-multipart-device.c',
       'fu-redfish-network.c',
+      'fu-redfish-network-device.c',
       'fu-redfish-request.c',
       'fu-redfish-smbios.c',
     ],
