--- a/plugins/uefi-capsule/uefi_capsule.conf
+++ b/plugins/uefi-capsule/uefi_capsule.conf
@@ -14,3 +14,6 @@
 # with the UEFI removable path enabled, the default esp path is set to /EFI/boot
 # the shim EFI binary and presumably this is $ESP/EFI/boot/bootx64.efi
 #FallbacktoRemovablePath=false
+
+# allow ignoring the CapsuleOnDisk support advertised by the firmware
+#DisableCapsuleUpdateOnDisk=true
