trivial: Add the ability to download files using PkClient for testing

--- a/data/bash-completion/fwupdmgr.in
+++ b/data/bash-completion/fwupdmgr.in
@@ -6,6 +6,7 @@ _fwupdmgr_cmd_list=(
 	'clear-results'
 	'disable-remote'
 	'downgrade'
+	'download'
 	'enable-remote'
 	'get-approved-firmware'
 	'get-blocked-firmware'
