--- a/data/meson.build
+++ b/data/meson.build
@@ -49,7 +49,6 @@ if get_option('systemd') and build_daemon
   con2.set('bindir', bindir)
   con2.set('datadir', datadir)
   con2.set('localstatedir', localstatedir)
-  con2.set('package_name', meson.project_name())
   rw_directories = []
   if get_option('plugin_uefi_capsule')
     rw_directories += ['-/boot/efi', '-/efi/EFI', '-/boot/EFI']
@@ -66,6 +65,12 @@ if get_option('systemd') and build_daemon
     dynamic_options += ['ReadWritePaths=' + ' '.join(rw_directories)]
   else
     dynamic_options += ['ReadWriteDirectories=' + ' '.join(rw_directories)]
+  endif
+  #pull configuration/cache/state from /etc and /var only if prefix is /usr
+  if get_option('prefix') == '/usr'
+    dynamic_options += 'ConfigurationDirectory=fwupd'
+    dynamic_options += 'StateDirectory=fwupd'
+    dynamic_options += 'CacheDirectory=fwupd'
   endif
   con2.set('dynamic_options', '\n'.join(dynamic_options))
   con2.set('motd_dir', motd_dir)
