--- a/.github/workflows/create_containers.yml
+++ b/.github/workflows/create_containers.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [fedora, debian-x86_64, arch, debian-i386]
+        os: [fedora, debian-x86_64, arch, debian-i386, void]
 
     steps:
       - name: Check out the repo
