--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,6 +52,7 @@ repos:
       name: clang-format
       language: script
       entry: ./contrib/reformat-code.py
+      types: [c]
 -   repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.27.1
     hooks:
