--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -393,7 +393,9 @@ done
 %dir %{_datadir}/fwupd/quirks.d
 %{_datadir}/fwupd/quirks.d/*.quirk
 %{_datadir}/doc/fwupd/builder/README.md
+%if 0%{?have_uefi}
 %{_sysconfdir}/grub.d/35_fwupd
+%endif
 %{_libdir}/libfwupd*.so.*
 %{_libdir}/girepository-1.0/Fwupd-2.0.typelib
 %{_libdir}/girepository-1.0/FwupdPlugin-1.0.typelib
