Rename some confusing API
More than one person has asked about 'why call fu_plugin_update() for a
reinstall or downgrade' and I didn't have a very good answer.

The plugin API is not officially stable, and we should fix things to be
less confusing. Use the same verbs as the FuDevice vfuncs instead.

--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -66,9 +66,9 @@ override_dh_install:
 	dh_missing -a --fail-missing
 
 	#this is placed in fwupd-tests
-	rm -f debian/fwupd/usr/lib/*/fwupd-plugins-3/libfu_plugin_test.so
-	rm -f debian/fwupd/usr/lib/*/fwupd-plugins-3/libfu_plugin_test_ble.so
-	rm -f debian/fwupd/usr/lib/*/fwupd-plugins-3/libfu_plugin_invalid.so
+	rm -f debian/fwupd/usr/lib/*/fwupd-plugins-*/libfu_plugin_test.so
+	rm -f debian/fwupd/usr/lib/*/fwupd-plugins-*/libfu_plugin_test_ble.so
+	rm -f debian/fwupd/usr/lib/*/fwupd-plugins-*/libfu_plugin_invalid.so
 	rm -f debian/fwupd/etc/fwupd/remotes.d/fwupd-tests.conf
 
 override_dh_strip_nondeterminism:
