--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -5,6 +5,7 @@
 %global libjcat_version 0.1.0
 %global systemd_version 231
 %global json_glib_version 1.1.1
+%global fwupdplugin_version @FWUPD_PLUGINVER@
 
 # although we ship a few tiny python files these are utilities that 99.99%
 # of users do not need -- use this to avoid dragging python onto CoreOS
@@ -396,104 +397,105 @@ done
 %if 0%{?have_uefi}
 %{_sysconfdir}/grub.d/35_fwupd
 %endif
-%{_libdir}/libfwupd*.so.*
+%{_libdir}/libfwupd.so.2*
+%{_libdir}/libfwupdplugin.so.%{fwupdplugin_version}*
 %{_libdir}/girepository-1.0/Fwupd-2.0.typelib
 %{_libdir}/girepository-1.0/FwupdPlugin-1.0.typelib
 /usr/lib/udev/rules.d/*.rules
 /usr/lib/systemd/system-shutdown/fwupd.shutdown
-%dir %{_libdir}/fwupd-plugins-3
-%{_libdir}/fwupd-plugins-3/libfu_plugin_acpi_dmar.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_acpi_facp.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_acpi_phat.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_altos.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_amt.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_analogix.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_ata.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_bcm57xx.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_ccgx.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_colorhug.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_cros_ec.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_cpu.so
+%dir %{_libdir}/fwupd-plugins-%{fwupdplugin_version}
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_acpi_dmar.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_acpi_facp.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_acpi_phat.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_altos.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_amt.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_analogix.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_ata.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_bcm57xx.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_ccgx.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_colorhug.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_cros_ec.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_cpu.so
 %if 0%{?have_dell}
-%{_libdir}/fwupd-plugins-3/libfu_plugin_dell.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_dell_esrt.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_dell.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_dell_esrt.so
 %endif
-%{_libdir}/fwupd-plugins-3/libfu_plugin_dell_dock.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_dfu.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_dfu_csr.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_ebitdo.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_elantp.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_emmc.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_ep963x.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_fastboot.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_fresco_pd.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_hailuck.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_iommu.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_jabra.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_dell_dock.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_dfu.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_dfu_csr.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_ebitdo.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_elantp.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_emmc.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_ep963x.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_fastboot.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_fresco_pd.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_hailuck.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_iommu.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_jabra.so
 %if 0%{?have_uefi}
-%{_libdir}/fwupd-plugins-3/libfu_plugin_lenovo_thinklmi.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_lenovo_thinklmi.so
 %endif
-%{_libdir}/fwupd-plugins-3/libfu_plugin_linux_lockdown.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_linux_sleep.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_linux_swap.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_linux_tainted.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_linux_lockdown.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_linux_sleep.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_linux_swap.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_linux_tainted.so
 %if 0%{?have_msr}
-%{_libdir}/fwupd-plugins-3/libfu_plugin_msr.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_msr.so
 %endif
-%{_libdir}/fwupd-plugins-3/libfu_plugin_nitrokey.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_nvme.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_optionrom.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_parade_lspcon.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_pci_bcr.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_pci_mei.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_pixart_rf.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_powerd.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_realtek_mst.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_redfish.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_rts54hid.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_rts54hub.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_solokey.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_steelseries.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_superio.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_nitrokey.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_nvme.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_optionrom.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_parade_lspcon.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_pci_bcr.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_pci_mei.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_pixart_rf.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_powerd.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_realtek_mst.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_redfish.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_rts54hid.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_rts54hub.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_solokey.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_steelseries.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_superio.so
 %if 0%{?have_dell}
-%{_libdir}/fwupd-plugins-3/libfu_plugin_synaptics_mst.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_synaptics_mst.so
 %endif
-%{_libdir}/fwupd-plugins-3/libfu_plugin_synaptics_cxaudio.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_synaptics_prometheus.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_synaptics_rmi.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_system76_launch.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_synaptics_cxaudio.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_synaptics_prometheus.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_synaptics_rmi.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_system76_launch.so
 %if 0%{?enable_dummy}
-%{_libdir}/fwupd-plugins-3/libfu_plugin_test.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_test_ble.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_invalid.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_test.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_test_ble.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_invalid.so
 %endif
-%{_libdir}/fwupd-plugins-3/libfu_plugin_thelio_io.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_thunderbolt.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_thelio_io.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_thunderbolt.so
 %if 0%{?have_uefi}
-%{_libdir}/fwupd-plugins-3/libfu_plugin_tpm.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_tpm_eventlog.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_bios.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_uefi_capsule.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_uefi_dbx.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_uefi_pk.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_uefi_recovery.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_tpm.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_tpm_eventlog.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_bios.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_uefi_capsule.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_uefi_dbx.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_uefi_pk.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_uefi_recovery.so
 %endif
-%{_libdir}/fwupd-plugins-3/libfu_plugin_logind.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_logitech_hidpp.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_upower.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_vli.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_wacom_raw.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_wacom_usb.so
-%{_libdir}/fwupd-plugins-3/libfu_plugin_goodixmoc.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_logind.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_logitech_hidpp.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_upower.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_vli.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_wacom_raw.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_wacom_usb.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_goodixmoc.so
 %ghost %{_localstatedir}/lib/fwupd/gnupg
 
 %if 0%{?have_modem_manager}
 %files plugin-modem-manager
-%{_libdir}/fwupd-plugins-3/libfu_plugin_modem_manager.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_modem_manager.so
 %endif
 %if 0%{?have_flashrom}
 %files plugin-flashrom
-%{_libdir}/fwupd-plugins-3/libfu_plugin_flashrom.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_flashrom.so
 %endif
 %if 0%{?have_uefi}
 %files plugin-uefi-capsule-data
