--- a/contrib/setup-win32.nsi.in
+++ b/contrib/setup-win32.nsi.in
@@ -64,13 +64,13 @@ Section "fwupd"
   File "jcat-tool.exe"
   File "fwupdtool.exe"
   File "libfwupd-2.dll"
-  File "libfwupdplugin-2.dll"
+  File "libfwupdplugin-4.dll"
   File "libgcab-1.0-0.dll"
   File "libxmlb-2.dll"
   File "libjcat-1.dll"
   File "libgusb-2.dll"
-  SetOutPath "$INSTDIR\fwupd-plugins-3"
-  File /r "fwupd-plugins-3/libfu_plugin_*.dll"
+  SetOutPath "$INSTDIR\fwupd-plugins-@FWUPD_PLUGINVER@"
+  File /r "fwupd-plugins-@FWUPD_PLUGINVER@/libfu_plugin_*.dll"
   SetOutPath "$INSTDIR\etc\fwupd"
   File "etc/fwupd/daemon.conf"
   SetOutPath "$INSTDIR\etc\pki\fwupd"
