--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,6 +53,11 @@ repos:
       language: script
       entry: ./contrib/reformat-code.py
       types: [c]
+    - id: check-license
+      name: Check license header
+      types_or: [shell, c, python]
+      language: script
+      entry: ./contrib/ci/check-license.py
 -   repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.27.1
     hooks:
