trivial: don't use same variable definition as config.h in code
If config.h is included by a file then which one is used may end up
be confusing.  Be explicit to use the values that are declared by
libraries.

--- a/libfwupdplugin/meson.build
+++ b/libfwupdplugin/meson.build
@@ -1,3 +1,9 @@
+fwupdplugin_version_h = configure_file(
+  input : 'fu-version.h.in',
+  output : 'fu-version.h',
+  configuration : conf
+)
+
 fwupdplugin_src = [
   'fu-archive.c',
   'fu-backend.c',
@@ -132,7 +138,7 @@ fwupdplugin_headers_private = [
   'fu-smbios-private.h',
   'fu-udev-device-private.h',
   'fu-usb-device-private.h',
-  'fu-version.h',
+  fwupdplugin_version_h,
 ]
 
 introspection_deps = [
