--- a/meson.build
+++ b/meson.build
@@ -12,9 +12,9 @@ fwupd_minor_version = varr[1]
 fwupd_micro_version = varr[2]
 
 conf = configuration_data()
-conf.set('FWUPD_MAJOR_VERSION', fwupd_major_version)
-conf.set('FWUPD_MINOR_VERSION', fwupd_minor_version)
-conf.set('FWUPD_MICRO_VERSION', fwupd_micro_version)
+conf.set('MAJOR_VERSION', fwupd_major_version)
+conf.set('MINOR_VERSION', fwupd_minor_version)
+conf.set('MICRO_VERSION', fwupd_micro_version)
 conf.set_quoted('PACKAGE_VERSION', fwupd_version)
 
 # get source version, falling back to package version
