--- a/plugins/logitech-hidpp/meson.build
+++ b/plugins/logitech-hidpp/meson.build
@@ -21,6 +21,7 @@ shared_module('fu_plugin_logitech_hidpp',
     'fu-logitech-hidpp-hidpp-msg.c',
     'fu-logitech-hidpp-runtime.c',
     'fu-logitech-hidpp-runtime-unifying.c',
+    'fu-logitech-hidpp-runtime-bolt.c',
   ],
   include_directories : [
     root_incdir,
