trivial: fix the grub configuration from 684bc03 fixes #3685

--- a/plugins/uefi-capsule/fwupd.grub.conf.in
+++ b/plugins/uefi-capsule/fwupd.grub.conf.in
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: LGPL-2.1+
 set -e
 
-${pkgdatadir:?}
+[ -d ${pkgdatadir:?} ]
 # shellcheck source=/dev/null
 . "$pkgdatadir/grub-mkconfig_lib"
 
