fixed pre-commit error

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -18,6 +18,7 @@ subdir('dfu')
 subdir('dfu-csr')
 subdir('ebitdo')
 subdir('elantp')
+subdir('elanfp')
 subdir('emmc')
 subdir('ep963x')
 subdir('fastboot')
