--- a/plugins/redfish/redfish.conf
+++ b/plugins/redfish/redfish.conf
@@ -12,3 +12,6 @@
 # Expected value: TRUE or FALSE
 # Default: FALSE
 #CACheck=
+
+# Do not use IPMI KCS to create an initial user account if no SMBIOS data
+IpmiDisableCreateUser=False
