--- a/meson.build
+++ b/meson.build
@@ -360,6 +360,18 @@ endif
 if cc.has_header_symbol('locale.h', 'LC_MESSAGES')
   conf.set('HAVE_LC_MESSAGES', '1')
 endif
+if cc.has_header('linux/ipmi.h')
+  have_linux_ipmi = true
+  conf.set('HAVE_LINUX_IPMI_H', '1')
+else
+  have_linux_ipmi = false
+endif
+if cc.has_header_symbol('linux/ipmi_msgdefs.h', 'IPMI_DEVICE_IN_FW_UPDATE_ERR')
+  conf.set('HAVE_IPMI_DEVICE_IN_FW_UPDATE_ERR', '1')
+endif
+if cc.has_header_symbol('linux/ipmi_msgdefs.h', 'IPMI_DEVICE_IN_INIT_ERR')
+  conf.set('HAVE_IPMI_DEVICE_IN_INIT_ERR', '1')
+endif
 if cc.has_header_symbol('fcntl.h', 'F_WRLCK')
   conf.set('HAVE_WRLCK', '1')
 endif
