plugins: add support for Synaptics CAPE devices.

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -54,6 +54,7 @@ subdir('rts54hub')
 subdir('solokey')
 subdir('steelseries')
 subdir('superio')
+subdir('synaptics-cape')
 subdir('synaptics-cxaudio')
 subdir('synaptics-mst')
 subdir('synaptics-prometheus')
