plugins/flashrom: Add private flag to reset CMOS Reset the CMOS based on a private flag. Tested on coreboot using an offset of 123. Required when a CMOS layout or default option has changed as the resulting flash will have 0's for the modified option.

--- a/plugins/flashrom/meson.build
+++ b/plugins/flashrom/meson.build
@@ -11,6 +11,7 @@ shared_module('fu_plugin_flashrom',
     'fu-flashrom-device.c',
     'fu-flashrom-internal-device.c',
     'fu-plugin-flashrom.c',
+    'fu-flashrom-cmos.c',
   ],
   include_directories : [
     root_incdir,
