wacom_usb: Introduce bluetooth-id6 module
Wacom is beginning to integrate a new Bluetooth chipset in their
devices. This chipset uses a somewhat different flash protocol
and requires the creation of a new fwupd module. Chipsets using
this new protocol are identified in the firmware descriptor with
ID 0x06, leading to our choice of module name: "bluetooth-id6".

The new chipset is first appearing in a minor update to the Wacom
Intuos (CTL-4100WL/CTL-6100WL) line. These devices do not support
the firmware descriptor interface, requiring us to statically assign
it as a module in the legacy codepath if any Bluetooth support is
found. This clutters the output of the `get-devices` command but the
update CAB files ensure the correct module is used depending on PID.

--- a/plugins/wacom-usb/meson.build
+++ b/plugins/wacom-usb/meson.build
@@ -14,6 +14,7 @@ shared_module('fu_plugin_wacom_usb',
     'fu-wac-firmware.c',          # fuzzing
     'fu-wac-module.c',
     'fu-wac-module-bluetooth.c',
+    'fu-wac-module-bluetooth-id6.c',
     'fu-wac-module-touch.c',
     'fu-plugin-wacom-usb.c',
   ],
