Document some of the environment variables used by fwupd
Fixes https://github.com/fwupd/fwupd/issues/3760

--- a/docs/fwupdplugin.toml.in
+++ b/docs/fwupdplugin.toml.in
@@ -42,6 +42,7 @@ base_url = "https://github.com/fwupd/fwupd/blob/@version@/"
 
 [extra]
 content_files = [
+  "env.md",
   "tutorial.md",
   "hsi.md",
 ]
