Add FuCfuPayload and FuCfuOffer
We can use these in the future elantp plugin, and I'm sure we'll need
them again in the future for an *actual* CFU plugin.

--- a/libfwupdplugin/meson.build
+++ b/libfwupdplugin/meson.build
@@ -18,6 +18,8 @@ fwupdplugin_src = [
   'fu-device-locker.c',     # fuzzing
   'fu-device.c',            # fuzzing
   'fu-dfu-firmware.c',      # fuzzing
+  'fu-cfu-offer.c',         # fuzzing
+  'fu-cfu-payload.c',       # fuzzing
   'fu-volume.c',            # fuzzing
   'fu-firmware.c',          # fuzzing
   'fu-firmware-common.c',   # fuzzing
@@ -82,6 +84,8 @@ fwupdplugin_headers = [
   'fu-device-metadata.h',
   'fu-device-locker.h',
   'fu-dfu-firmware.h',
+  'fu-cfu-offer.h',
+  'fu-cfu-payload.h',
   'fu-efi-common.h',
   'fu-efi-firmware-file.h',
   'fu-efi-firmware-filesystem.h',
